src/snapshots/tptp__tests__name.snap
---
source: src/tests.rs
expression: parsed
---
AtomicWord(
    Lower(
        LowerWord(
            "lower_word2",
        ),
    ),
)
