src/snapshots/tptp__tests__name_list-3.snap
---
source: src/tests.rs
expression: parsed
---
NameList(
    [
        AtomicWord(
            Lower(
                LowerWord(
                    "name",
                ),
            ),
        ),
    ],
)
