src/snapshots/tptp__tests__name_list.snap
---
source: src/tests.rs
expression: parsed

---
NameList(
    [
        AtomicWord(
            Lower(
                LowerWord(
                    "name",
                ),
            ),
        ),
        AtomicWord(
            SingleQuoted(
                SingleQuoted(
                    "name",
                ),
            ),
        ),
        Integer(
            Integer(
                "123",
            ),
        ),
    ],
)
