src/snapshots/tptp__tests__number-3.snap
---
source: src/tests.rs
expression: parsed

---
Rational(
    Rational(
        "-123/456",
    ),
)
