src/snapshots/tptp__tests__optional_info-3.snap
---
source: src/tests.rs
expression: parsed

---
OptionalInfo(
    Some(
        UsefulInfo(
            GeneralList(
                Some(
                    GeneralTerms(
                        [
                            Data(
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "X",
                                        ),
                                    ),
                                ),
                            ),
                            Data(
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "Y",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ),
)
