src/snapshots/tptp__tests__tfx_annotated-6.snap
---
source: src/tests.rs
assertion_line: 31
expression: parsed

---
tff(test,axiom,$true,unknown,[]).
