src/snapshots/tptp__tests__tfx_annotated.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
TfxAnnotated(
    Annotated {
        name: AtomicWord(
            Lower(
                LowerWord(
                    "test",
                ),
            ),
        ),
        role: FormulaRole(
            LowerWord(
                "axiom",
            ),
        ),
        formula: Logic(
            Unitary(
                Atomic(
                    Defined(
                        DefinedAtomic(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        annotations: Annotations(
            None,
        ),
    },
)
